@@ -5,9 +5,9 @@ class CustomHandler < ActionView::TemplateHandler
     @view = view
   end
 
-  def render( template, local_assigns )
-    [ template,
-      local_assigns,
+  def render( template )
+    [ template.source,
+      template.locals,
       @view ]
   end
 end
