@@ -35,8 +35,8 @@ class MabView < ActionView::TemplateHandler
   def initialize(view)
   end
   
-  def render(text, locals = {})
-    text
+  def render(template)
+    template.source
   end
 end
 
