@@ -1,0 +1,1 @@
+<%= customer_counter.name %><%= customer_counter_counter %>
